%%{init: {
"theme": "base",
"themeVariables": {
"background": "#ffffff",
"primaryColor": "#ffffff",
"primaryTextColor": "#111827",
"primaryBorderColor": "#9ca3af",
"lineColor": "#6b7280",
"secondaryColor": "#f9fafb",
"tertiaryColor": "#f3f4f6",
"fontFamily": "Arial"
}
}}%%
erDiagram
    users {
        varchar id PK
        varchar full_name
        varchar role
        varchar assigned_barangay
        boolean is_active
    }

    barangays {
        uuid id PK
        varchar name
        varchar code
        boolean is_active
    }

    user_barangay_assignments {
        uuid id PK
        varchar user_id FK
        uuid barangay_id FK
        varchar assigned_by FK
        boolean is_active
    }

    caregivers {
        uuid id PK
        varchar full_name
        varchar mobile_number
        varchar relationship
        boolean is_portal_enrolled
        varchar enrolled_by FK
    }

    infant_registrations {
        varchar id PK
        varchar reference_id
        jsonb registration_data
        varchar status
        varchar barangay
        varchar created_by FK
        varchar reviewed_by FK
        varchar promoted_infant_id FK
        timestamptz submitted_at
    }

    infants {
        varchar id PK
        varchar reference_id
        uuid caregiver_id FK
        varchar caregiver_phone
        varchar barangay
        varchar created_by FK
        varchar registration_status
    }

    users ||--o{ user_barangay_assignments : "user_id"
    users ||--o{ user_barangay_assignments : "assigned_by"
    barangays ||--o{ user_barangay_assignments : "barangay_id"
    users ||--o{ caregivers : "enrolled_by"
    caregivers ||--o{ infants : "caregiver_id"
    users ||--o{ infant_registrations : "created_by"
    users ||--o{ infant_registrations : "reviewed_by"
    users ||--o{ infants : "created_by"
    infant_registrations ||--o| infants : "promoted_infant_id"
